# Mudbox_custom_plugin_CleanLayers

./: CMakeLists.txt  LayerCleaner.cpp  LayerCleaner.h  PluginMain.cpp  README.md
